@@ -5,7 +5,7 @@ call ant -Dlanguage=fr all
 call ant -Dlanguage=gl all
 call ant -Dlanguage=ia all
 call ant -Dlanguage=it all
-call ant -Dlanguage=ja html
+call ant -Dlanguage=ja html pdf-cjk
 call ant -Dlanguage=nl all
 call ant -Dlanguage=ru all
-call ant -Dlanguage=zh_CN html
+call ant -Dlanguage=zh_CN html pdf-cjk
